# ros-redis

./: .gitignore  INSTALL  README.md  makefile  redis_install.bash  ros_install.bash
Tools/: checkTopic.py
acerta/: relevant-topics.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/concert_msgs/: AllocateSoftwareRequest.h  AllocateSoftwareResponse.h  ConcertClient.h  ConcertClientState.h  ConcertClients.h  ConductorGraph.h  EnableServiceRequest.h  EnableServiceResponse.h  ErrorCodes.h  LinkConnection.h  LinkEdge.h  LinkGraph.h  LinkNode.h  ServiceProfile.h  Services.h  SoftwareInstance.h  SoftwareInstances.h  SoftwareProfile.h  SoftwareProfiles.h  Strings.h  UpdateServiceConfigRequest.h  UpdateServiceConfigResponse.h
catkin_ws/devel/include/concert_service_msgs/: CaptureResourcePair.h  CaptureResourcePairRequest.h  CaptureResourcePairResponse.h  CaptureResourceRequest.h  CaptureResourceResponse.h  KillTurtlePair.h  KillTurtlePairRequest.h  KillTurtlePairResponse.h  KillTurtleRequest.h  KillTurtleResponse.h  SpawnTurtlePair.h  SpawnTurtlePairRequest.h  SpawnTurtlePairResponse.h  SpawnTurtleRequest.h  SpawnTurtleResponse.h
catkin_ws/devel/include/concert_workflow_engine_msgs/: EnableWorkflows.h  Workflow.h  WorkflowsStatus.h
catkin_ws/devel/include/gateway_msgs/: AdvertiseAllRequest.h  AdvertiseAllResponse.h  AdvertiseRequest.h  AdvertiseResponse.h  ConnectHubRequest.h  ConnectHubResponse.h  ConnectionStatistics.h  ConnectionType.h  ErrorCodes.h  GatewayInfo.h  RemoteAllRequest.h  RemoteAllResponse.h  RemoteGateway.h  RemoteGatewayInfoRequest.h  RemoteGatewayInfoResponse.h  RemoteRequest.h  RemoteResponse.h  RemoteRule.h  RemoteRuleWithStatus.h  Rule.h  SetWatcherPeriodRequest.h  SetWatcherPeriodResponse.h
catkin_ws/devel/include/rocon_app_manager_msgs/: Constants.h  ErrorCodes.h  GetRappListRequest.h  GetRappListResponse.h  IncompatibleRappList.h  InitRequest.h  InitResponse.h  InviteRequest.h  InviteResponse.h  PublicInterface.h  PublishedInterface.h  Rapp.h  RappList.h  StartRappRequest.h  StartRappResponse.h  Status.h  StopRappRequest.h  StopRappResponse.h
catkin_ws/devel/include/rocon_device_msgs/: Device.h  Devices.h  GetDeviceListRequest.h  GetDeviceListResponse.h  Hue.h  HueArray.h  HueState.h
catkin_ws/devel/include/rocon_interaction_msgs/: ErrorCodes.h  GetInteraction.h  GetInteractionRequest.h  GetInteractionResponse.h  GetInteractions.h  GetInteractionsRequest.h  GetInteractionsResponse.h  GetPairings.h  GetPairingsRequest.h  GetPairingsResponse.h  Interaction.h  InteractiveClient.h  InteractiveClients.h  Pairing.h  PairingStatus.h  RemoconStatus.h  RequestInteraction.h  RequestInteractionRequest.h  RequestInteractionResponse.h  SetInteractions.h  SetInteractionsRequest.h  SetInteractionsResponse.h  StartPairing.h  StartPairingRequest.h  StartPairingResponse.h  StopPairing.h  StopPairingRequest.h  StopPairingResponse.h  Strings.h
catkin_ws/devel/include/rocon_service_pair_msgs/: TestiesPair.h  TestiesPairRequest.h  TestiesPairResponse.h  TestiesRequest.h  TestiesResponse.h
catkin_ws/devel/include/rocon_std_msgs/: Connection.h  ConnectionCacheSpin.h  ConnectionsDiff.h  ConnectionsList.h  EmptyString.h  EmptyStringRequest.h  (+13 more)
catkin_ws/src/beginner_tutorials/: CMakeLists.txt
msgs/: get_msgs.bash
msgs/anm_msgs/: BoundingBox3d.msg  VehicleState.msg
msgs/etrans_msgs/: etrans_intersection.msg  etrans_light.msg  etrans_vehicle.msg
msgs/rea_perception_msgs/: rea_perception_2dbox.msg  rea_perception_3dbox.msg  rea_perception_header.msg  rea_perception_lane_msg.msg  rea_perception_line_curvature.msg  rea_perception_line_segment.msg  rea_perception_line_type.msg  rea_perception_object.msg  rea_perception_object_classification.msg  rea_perception_object_msg.msg  rea_perception_orientation.msg  rea_perception_orientation_msg.msg  rea_perception_parking_space_classification.msg  rea_perception_parking_space_msg.msg  rea_perception_parking_space_outline.msg  rea_perception_parking_space_spot.msg  rea_perception_rotation.msg  rea_perception_traffic_light.msg  rea_perception_traffic_light_msg.msg  rea_perception_traffic_light_status.msg  rea_perception_traffic_light_type.msg  rea_perception_traffic_sign.msg  rea_perception_traffic_sign_msg.msg  rea_perception_traffic_sign_type.msg  rea_perception_velocity.msg  rea_perception_xy.msg  rea_perception_xyz.msg  rea_perception_yz.msg
project/beginner_tutorials/: CMakeLists.txt  README.md  package.xml
project/beginner_tutorials/launch/: redis_listen.launch
project/beginner_tutorials/scripts/: listener.py  talker.py  view_db.py
project/beginner_tutorials/src/: talker.py  test.py
rospackages/fisch_core/p1hc_fault_detector/: CMakeLists.txt  README.md  nodelets.xml  package.xml
rospackages/fisch_core/p1hc_fault_detector/config/: udp_params.yaml
rospackages/fisch_core/p1hc_fault_detector/include/p1hc_fault_detector/: nodelet.hpp  udpDriver.hpp
rospackages/fisch_core/p1hc_fault_detector/launch/: p1hc_fault_detector.launch
rospackages/fisch_core/p1hc_fault_detector/scripts/: get_act_udp_from_h3.py  get_p1hc_alert.py  get_p1hc_diag.py  udp_receiver.py
rospackages/fisch_core/p1hc_fault_detector/src/: node.cpp  nodelet.cpp  udpDriver.cpp
rospackages/fisch_core/redis_daq/: CMakeLists.txt  README.md
scripts/: robot_upstart.md  service_restarter.py
scripts/startup/: README.md  build_for_install.bash  redis_daq.service  redis_daq_disable_startup.bash  redis_daq_enable_startup.bash  redis_daq_startup.bash  robot_upstart.md
setup/: redis_connection.md
setup/deploy/: build_for_install.bash  copy_install_to_repo.bash  delete_service.bash  deploy.bash  disable_startup.bash  enable_startup.bash  fischRedis.service  fischRedis_startup.bash  install-local.bash  install-to-ECU.bash  install-to-PC.bash  install_from_repo.bash
setup/deploy/opt/ros/fisch/share/redis_daq/: package.xml
setup/deploy/opt/ros/fisch/share/redis_daq/cmake/: redis_daqConfig.cmake
setup/deploy/opt/ros/fisch/share/redis_daq/config/: redis_daq_params.yaml
setup/info/: dynamicDNS.md  redis_master_slave.md
(+878 files in other folders)
