<?xml version="1.0"?>
<package format="2">
  <name>p1hc_fault_detector</name>
  <version>0.0.1</version>
  <description>FISCH p1hc_fault_detector</description>
  <maintainer email="wqkhan@uwaterloo.ca">Waleed Khan</maintainer>

  <license>TODO</license>
  <author>Larry Deal</author>

    <!-- Depends -->
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>nodelet</depend>

  <!-- The export tag contains other, unspecified, tags -->
    <export>
        <nodelet plugin="${prefix}/nodelets.xml"/>
    </export>
</package>
