<?xml version="1.0"?>
<package format="2">
  <name>redis_daq</name>
  <version>0.0.0</version>
  <description>FISCH redis_daq</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="giovani@todo.todo">giovani</maintainer>
  <maintainer email="wqkhan@uwaterloo.ca">Waleed Khan</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

    <!-- Depends -->
  <depend>anm_msgs</depend>
  <depend>dbw_mkz_msgs</depend>    
  <!-- <buildtool_depend>catkin</buildtool_depend> -->
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>roslib</depend>
    <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
